--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,6 +8,13 @@ on:
   pull_request:
     branches: ["master"]
 
+permissions:
+  packages: write
+
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: false
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,10 +24,22 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.ALIST_GITHUB_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build the  Docker image
+      - uses: docker/setup-qemu-action@v2
+      - uses: docker/setup-buildx-action@v2
+
+      - name: Build the Docker image
         run:
           |
-          docker build . --file Dockerfile --tag ghcr.io/z-mio/alist-bot:latest 
-          docker push ghcr.io/z-mio/alist-bot:latest 
+          docker buildx build --platform linux/amd64 . \
+          --file Dockerfile \
+          --tag ghcr.io/benjithatfoxguy/alist-bot:latest \
+          --push
+
+      - name: Build the Docker image (arm64)
+        run: |
+          docker buildx build --platform linux/arm64 . \
+            --file Dockerfile \
+            --tag ghcr.io/benjithatfoxguy/alist-bot:latest \
+            --push
