--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 PyYAML~=6.0.1
 APScheduler~=3.10.1
 croniter~=2.0.1
-Pyrogram~=2.0.106
-TgCrypto
+pyrofork
+TgCrypto-pyrofork
 loguru~=0.7.2
 httpx~=0.25.1
 uvicorn~=0.27.0.post1
